link to github repo

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 			</div><br>
 			text only thing
 			<h1>maybe check my <a href="https://hayattgd.github.io">website</a></h1>
+			<h3 style="text-align: center;">or check <a href="https://github.com/hayattgd/experiment">source code</a></h3>
 		</div>
 	</main>
 </body>
