--- a/floating-point-number/index.html
+++ b/floating-point-number/index.html
@@ -14,7 +14,7 @@
 <body>
 	<header><a href="../index.html">back</a></header>
 	<main>
-		<h1 id="binary-result">
+		<h1 class="panel" id="binary-result">
 			<span id="binary-sign">
 				<div id="binary-interactive-sign"></div>
 				<p class="sign">sign<small> (+/-)</small></p>
@@ -28,7 +28,7 @@
 				<p class="mantissa">mantissa <small>(aka fraction/significand)</small></p>
 			</span>
 		</h1>
-		<h3>
+		<h3 class="panel">
 			(-1)<sup class="sign">sign</sup>&times;<span class="mantissa">mantissa</span>&times;2<sup
 				class="exponent">exponent</sup>
 			<br>= (-1)<sup class="sign" id="sn-decimal-sign"></sup>&times;<span class="mantissa"
