--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
 <body>
 	<main>
 		<div>
-			<h1 id="top">check out <i>things i made</i></h1>
-			<ul>
-				<h3>Visualizations</h3>
-				<li><a href="floating-point-number/index.html">Floating point number</a></li>
-			</ul>
-			<hr>
+			<div class="panel">
+				<ul>
+					<h3>Tools</h3>
+					<li><a href="floating-point-number/index.html">Floating point number</a></li>
+					<li><a href="chord-player/index.html">Chord player / tester</a></li>
+				</ul>
+			</div>
+			<hr style="height: 65vh; margin-top: 15vh;">
 
 			<maybe dont="click" this="thing" cuz="u" will="waste" ur="time?">
 				<div>
@@ -36,6 +38,7 @@
 				</div>
 			</maybe>
 			<h1><i><b>testing zone</b></i></h1>
+			<p class="panel">panel</p>
 			<uhhh some thing style=" display: none;">this message should be hidden</uhhh>
 			<h1>h1</h1>
 			<h2>h2</h2>
@@ -52,14 +55,16 @@
 			<a href="#top">a to .#top</a>
 			<p>emoji🤓 + paragraph あいうえお,、。.漢字</p>
 			<p>|.....|...|.......|.|.......|..|...| is it monospace?</p>
-			<div class="side-by-side">img:<img src="https://hayattgd.github.io/img/favicon.png" alt=""></div><br>
-			<div class="side-by-side">background-image:<div
+			<div class="side-by-side panel">img:<img src="https://hayattgd.github.io/img/favicon.png" alt=""></div><br>
+			<div class="side-by-side panel">background-image:<div
 					style="background-image: url(https://hayattgd.github.io/img/favicon.png); width: 160px; height: 160px;">
 				</div>
 			</div><br>
 			text only thing
-			<h1>maybe check my <a href="https://hayattgd.github.io">website</a></h1>
-			<h3 style="text-align: center;">or check <a href="https://github.com/hayattgd/experiment">source code</a></h3>
+			<div class="panel">
+				<h1>maybe check my <a href="https://hayattgd.github.io">website</a></h1>
+				<h3 style="text-align: center;">or check <a href="https://github.com/hayattgd/experiment">source code</a></h3>
+			</div>
 		</div>
 	</main>
 </body>
