--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 		<div>
 			<div class="panel">
 				<ul>
-					<h3>Tools</h3>
+					<h2>Tools</h2>
+					<h3>Computer Science</h3>
 					<li><a href="floating-point-number/index.html">Floating point number</a></li>
+					<h3>Sounds</h3>
 					<li><a href="chord-player/index.html">Chord player / tester</a></li>
 				</ul>
 			</div>
