auto-adjust chord

--- a/chord-player/index.html
+++ b/chord-player/index.html
@@ -13,7 +13,10 @@
 <body>
 	<header><a href="../index.html">back</a></header>
 	<main>
-		<p class="side-by-side panel">Thin lines <input id="thin-lines" type="checkbox"></p>
+		<p class="side-by-side panel">
+			<button id="adjust-chord">Adjust chord</button>
+			Thin lines <input id="thin-lines" type="checkbox">
+		</p>
 		<div id="controls">
 		</div>
 	</main>
