dot product + categorize

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="article.css">
 	<style>
 		.whaterver-you-cant-select-text::after {
 			content: "can you select this text?";
@@ -18,14 +17,17 @@
 
 <body>
 	<main>
-		<div>
+		<div class="article" style="font-family: monospace;">
 			<div class="panel">
+				<h2>Visualization</h2>
 				<ul>
-					<h2>Tools</h2>
 					<h3>Computer Science</h3>
-					<li><a href="floating-point-number/index.html">Floating point number</a></li>
+					<li><a href="computer/floating-point-number/index.html">Floating point number</a></li>
+					<h3>Mathematics</h3>
+					<li><a href="mathematics/dot-product/index.html">Dot product</a></li>
+					<h2>Tools</h2>
 					<h3>Sounds</h3>
-					<li><a href="chord-player/index.html">Chord player / tester</a></li>
+					<li><a href="sounds/chord-player/index.html">Chord player / tester</a></li>
 				</ul>
 			</div>
 			<hr style="height: 65vh; margin-top: 15vh;">
