--- a/sounds/chord-player/index.html
+++ b/sounds/chord-player/index.html
@@ -4,14 +4,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="../../style.css">
 	<link rel="shortcut icon" href="https://hayattgd.github.io/img/favicon.png" type="image/x-icon">
 	<title>Chord tester</title>
-	<script src="../script.js"></script>
+	<script src="../../script.js"></script>
 </head>
 
 <body>
-	<header><a href="../index.html">back</a></header>
+	<header><a href="../../index.html">back</a></header>
 	<main>
 		<p class="side-by-side panel">
 			<button id="adjust-chord">Adjust chord</button>
