--- a/computer/floating-point-number/index.html
+++ b/computer/floating-point-number/index.html
@@ -4,15 +4,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="../../style.css">
 	<link rel="stylesheet" href="style.css">
 	<link rel="shortcut icon" href="https://hayattgd.github.io/img/favicon.png" type="image/x-icon">
 	<title>Floating-point number visualization</title>
-	<script src="../script.js"></script>
+	<script src="../../script.js"></script>
 </head>
 
 <body>
-	<header><a href="../index.html">back</a></header>
+	<header><a href="../../index.html">back</a></header>
 	<main>
 		<h1 class="panel" id="binary-result">
 			<span id="binary-sign">
