--- a/mathematics/dot-product/index.html
+++ b/mathematics/dot-product/index.html
@@ -14,8 +14,7 @@
 	<header><a href="../../index.html">back</a></header>
 	<main>
 		<div class="panel multiple-control">
-			<!-- not implemented yet sry -->
-			<!-- <button>Swap vectors</button> -->
+			<button id="swap">Swap vectors</button>
 			<p>Result: <span id="result">0</span></p>
 		</div>
 		<div class="canvas-container panel">
