--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 					<li><a href="computer/floating-point-number/index.html">Floating point number</a></li>
 					<h3>Mathematics</h3>
 					<li><a href="mathematics/dot-product/index.html">Dot product</a></li>
+					<li><a href="mathematics/circle-collision/index.html">Circle collision detection</a></li>
 					<h2>Tools</h2>
 					<h3>Sounds</h3>
 					<li><a href="sounds/chord-player/index.html">Chord player / tester</a></li>
