--- a/mathematics/circle-collision/index.html
+++ b/mathematics/circle-collision/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<header><a href="../../index.html">back</a></header>
+	<header><a id="back" href="../../index.html">back</a></header>
 	<main>
 		<p style="font-family: serif;" class="panel">Colliding = Distance &le; r<sub>1</sub> + r<sub>2</sub> = <span
 				id="formula"></span> = <span id="result"></span></p>
