--- a/mathematics/dot-product/index.html
+++ b/mathematics/dot-product/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<header><a href="../../index.html">back</a></header>
+	<header><a id="back" href="../../index.html">back</a></header>
 	<main>
 		<div class="panel multiple-control">
 			<button id="swap">Swap vectors</button>
