--- a/sounds/chord-player/index.html
+++ b/sounds/chord-player/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<header><a href="../../index.html">back</a></header>
+	<header><a id="back" href="../../index.html">back</a></header>
 	<main>
 		<p class="side-by-side panel">
 			<button id="adjust-chord">Adjust chord</button>
