--- a/computer/floating-point-number/index.html
+++ b/computer/floating-point-number/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<header><a href="../../index.html">back</a></header>
+	<header><a id="back" href="../../index.html">back</a></header>
 	<main>
 		<h1 class="panel" id="binary-result">
 			<span id="binary-sign">
