--- a/mathematics/circle-collision/index.html
+++ b/mathematics/circle-collision/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../../style.css">
 	<link rel="shortcut icon" href="https://hayattgd.github.io/img/favicon.png" type="image/x-icon">
-	<title>Dot product visualization</title>
+	<title>Circle collision visualization</title>
 	<script src="../../script.js"></script>
 </head>
 
