custom editor for environments that cant open devtool or code editor

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 					<h3>Mathematics</h3>
 					<li><a href="mathematics/dot-product/index.html">Dot product</a></li>
 					<li><a href="mathematics/circle-collision/index.html">Circle collision detection</a></li>
+					<li><a href="mathematics/custom-math-visualization/index.html">Custom math visualization</a></li>
 					<h2>Tools</h2>
 					<h3>Sounds</h3>
 					<li><a href="sounds/chord-player/index.html">Chord player / tester</a></li>
