--- a/sounds/score-rhythm/index.html
+++ b/sounds/score-rhythm/index.html
@@ -6,11 +6,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../../style.css">
 	<link rel="shortcut icon" href="https://hayattgd.github.io/img/favicon.png" type="image/x-icon">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Music&display=swap" rel="stylesheet">
+
 	<title>Score rhythm player</title>
 	<script src="../../script.js"></script>
 	<style>
 		.highlight {
 			color: #0099ff;
+		}
+
+		button,
+		span {
+			font-family: "Noto Music";
 		}
 	</style>
 </head>
