oops forgot this one

--- a/sounds/score-rhythm/index.html
+++ b/sounds/score-rhythm/index.html
@@ -31,7 +31,8 @@
 		<div class="multiple-control">
 			<button id="play">Play</button>
 			<button id="reset">Reset</button>
-			<p>BPM:<input style="width: 50px;" type="number" id="bpm" value="60"></p>
+			<p>BPM:<input style="font-family: " Noto Music"; width: 50px;" type="number" id="bpm"
+					value="60"></p>
 		</div>
 		<div class="panel" style="font-size: 70px;">𝄞 <span id="score"></span></div>
 		<div class="controls panel" style="font-size: 45px;">
