this prob fix every font issue

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 					<h2>Tools</h2>
 					<h3>Sounds</h3>
 					<li><a href="sounds/chord-player/index.html">Chord player / tester</a></li>
+					<li><a href="sounds/advanced-metronome/index.html">Advanced Metronome</a></li>
 					<li><a href="sounds/score-rhythm/index.html">Rhythm player</a></li>
 				</ul>
 			</div>
